--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.3.0
 django-braces==1.4.0
 django-crispy-forms==1.4.0
 gunicorn==19.0.0
+psycopg2==2.5.3
 six==1.7.0
 whitenoise==1.0.3
 wsgiref==0.1.2
